[package]
name = "media_controller"
version = "0.1.0"
authors = ["marenaud"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.2"
regex = "1.4.3"
clap = "4.3.0"
home = "0.5.3"
serde = "1.0.124"
serde_derive = "1.0.124"
confy = "0.5.1"